# genesis_os_ds

./: .gitignore  README.md
genesis/: Cargo.toml  README.md  mapping.json
genesis/datasources/: alphavantage.py  binance_price.py  bitcoin_fee.py  cirium_flight_rate.py  cirium_flight_status.py  coingecko_volume.py  crypto_price_from_url.py  cryptocompare_price.py  deribit_iv.py  ds_eob.py  ethereum_erc20_balance.py  ethgasstation.py  fantasy_sport_ds.py  finage.py  gate_io.py  gate_io_server.py  gold_price.py  linear_index_1.py  linear_index_10.py  linear_index_12.py  linear_index_13.py  linear_index_2.py  linear_index_3.py  linear_index_4.py  linear_index_5.py  linear_index_6.py  linear_index_7.py  linear_index_8.py  linear_index_9.py  linear_xbci.py  linear_xlci.py  nft_goalserve_odd.py  open_sky_network.py  open_weather_map.py  pie_dao.py  qrng_anu.py  secondary_crypto_price.py  twap_price_binance.py  twelve.py  waves_asset_balances.py  (+8 more)
genesis/oracle_scripts/alphavantage/: Cargo.toml
genesis/oracle_scripts/asset_balance/: Cargo.toml
genesis/oracle_scripts/bitcoin_block_count/: Cargo.toml
genesis/oracle_scripts/bitcoin_block_hash/: Cargo.toml
genesis/oracle_scripts/bitcoin_fees/: Cargo.toml
genesis/oracle_scripts/bsc_crypto_price/: Cargo.toml
genesis/oracle_scripts/btc_parachain/: Cargo.toml
genesis/oracle_scripts/cirium_flight_rate/: Cargo.toml
genesis/oracle_scripts/cirium_flight_status/: Cargo.toml
genesis/oracle_scripts/coingecko_volume/: Cargo.toml
genesis/scripts/: add_os_ds.sh  gen_os_ds.py  os_to_wasm.sh
(+64 files in other folders)
