

[workspace]
members = [
    "oracle_scripts/crypto_price",
    "oracle_scripts/gold_price",
    "oracle_scripts/alphavantage",
    "oracle_scripts/bitcoin_block_count",
    "oracle_scripts/bitcoin_block_hash",
    "oracle_scripts/coingecko_volume",
    "oracle_scripts/crypto_compare_volume",
    "oracle_scripts/eth_gas_station",
    "oracle_scripts/open_sky_network",
    "oracle_scripts/open_weather_map",
    "oracle_scripts/fair_crypto_market_price",
    "oracle_scripts/qrng",
    "oracle_scripts/yahoo_price",
]
